# xchammer

./: .bazelrc  .gitattributes  .gitignore  .travis.yml  BUILD.bazel  CODE_OF_CONDUCT.md  Gemfile  Makefile  Package.resolved  Package.swift  README.md  WORKSPACE  XCHammer.yaml  export_tulsi_aspect_dir.sh  shipios.sh  taskfile  xcodeproject.bzl
.github/workflows/: ci.yml  ci_push.yml  upload_release_artifact.yml
BazelExtensions/: BUILD  tulsi.bzl  xchammerconfig.bzl  xcode_configuration_provider.bzl  xcodeproject.bzl
Docs/: BazelForiOSDevelopers.md  FastAndReproducibleBuildsWithXCHammer.md  PinterestFocusedXcodeProjects.md  XCHammerFAQ.md  XCHammerFocus.md  XCHammerOverview.md
IntegrationTests/: run_tests.sh
IntegrationTests/Goldmaster/SnapshotMe.xcodeproj/: project.pbxproj
IntegrationTests/Goldmaster/SnapshotMe/XcodeBazel.xcodeproj/: project.pbxproj
IntegrationTests/Goldmaster/Tailor.xcodeproj/: project.pbxproj
IntegrationTests/Goldmaster/Tailor/Tailor.xcodeproj/: project.pbxproj
IntegrationTests/Goldmaster/Tailor/XcodeBazel.xcodeproj/: project.pbxproj
IntegrationTests/Goldmaster/UrlGet.xcodeproj/: project.pbxproj
IntegrationTests/Goldmaster/UrlGet/UrlGet.xcodeproj/: project.pbxproj
IntegrationTests/Goldmaster/UrlGet/XcodeBazel.xcodeproj/: project.pbxproj
IntegrationTests/Goldmaster/WorkspaceSource.xcodeproj/: project.pbxproj
IntegrationTests/Goldmaster/WorkspaceSource/WorkspaceSource.xcodeproj/: project.pbxproj
IntegrationTests/Goldmaster/WorkspaceSource/XcodeBazel.xcodeproj/: project.pbxproj
Scripts/: generate_compilation_database.sh
Scripts/XCHammerShareData/xcschemes/: XCHammer-Package.xcscheme  XCHammer.xcscheme  XCHammerCompDB.xcscheme  xcschememanagement.plist
Sources/XCHammer/: BazelQueryer.swift  DictionaryExtensions.swift  Generator.swift  Monoids.swift  OrderedArray.swift  ParallelFlatMap.swift  ProcessIpa.swift  ProjectWriter.swift  Stub.swift  TulsiHooks.swift  TulsiRuleEntryMapExtractor.swift  XCBuildSettings.swift  XCHammerAsset.swift  XCHammerConfig.swift  XCHammerGenerateOptions.swift  XCHammerLogger.swift  XcodeBuildSystemInstaller.swift  XcodeGenProjectSpecExtensions.swift  XcodeScheme.swift  XcodeTarget.swift  XcodeTargetMap.swift  main.swift
XCHammerAssets/: Hammer.bzl  Stub.swift  codesigner.sh  retry.sh  swiftc_stub.py  xcode_clang_stub.sh  xcode_ld_stub.sh
sample/Frankenstein/: .bazelrc  .gitignore  BUILD  Makefile  Pods.WORKSPACE  WORKSPACE  XCHammer.yaml  main.m
sample/Frankenstein/tools/: bazelwrapper
sample/SnapshotMe/: .gitignore  BUILD  Info.plist  Makefile  WORKSPACE  XCHammer.yaml  pods.WORKSPACE
sample/SnapshotMe/SnapshotMe.xcworkspace/: contents.xcworkspacedata
sample/SnapshotMe/ios-app/: AppDelegate.m  BUILD
sample/SnapshotMe/tools/: XCHammer  bazelwrapper
sample/Tailor/: AppDelegate.swift  BUILD  Tailor.swift  WORKSPACE  XCHammer.yaml  xchammer.app
sample/Tailor/tools/: bazelwrapper  xchammer.app
sample/UrlGet/: .XCHammer.yaml.swp  .bazelrc  .gitignore  BUILD  BUILD.bazel  Makefile  Pods.WORKSPACE  UrlGetXcodeBuildScript.sh  WORKSPACE  XCHammer.yaml
sample/UrlGet/Scripts/: update_pods.sh
sample/UrlGet/UrlGet.xcodeproj/: project.pbxproj
sample/UrlGet/UrlGet.xcodeproj/XCHammerAssets/: BUILD  Hammer.bzl  bazel_build_settings.py  codesigner.sh  updateXcodeProj.sh
sample/UrlGet/UrlGet.xcodeproj/project.xcworkspace/xcshareddata/: WorkspaceSettings.xcsettings
sample/UrlGet/UrlGet.xcodeproj/xcshareddata/xcschemes/: UITests-Bazel.xcscheme  UITests.xcscheme  UnitTests-Bazel.xcscheme  UnitTests.xcscheme  UnitTestsWithHost-Bazel.xcscheme  UnitTestsWithHost.xcscheme  ios-app-Bazel.xcscheme  ios-app.xcscheme  share-extension-Bazel.xcscheme
sample/UrlGet/ios-app/: BUILD  Diags.xcconfig  Stub.h  Stub.m  empty-main.m
sample/UrlGet/ios-app/HeaderLib/: BUILD  HeaderLib.cpp
sample/UrlGet/ios-app/JerryExtension/Resources/: JerryExtension-Info.plist
sample/UrlGet/ios-app/ShareExtension/: ShareExtension-Info.plist
sample/UrlGet/ios-app/SiriExtension/Resources/: SiriExtension-Info.plist
sample/UrlGet/ios-app/SiriExtension/Resources/Localization/Base.lproj/: AppIntentVocabulary.plist
sample/UrlGet/ios-app/SiriExtension/Resources/Localization/cs.lproj/: AppIntentVocabulary.plist
sample/UrlGet/ios-app/SiriExtension/Resources/Localization/zh-Hans.lproj/: AppIntentVocabulary.plist
sample/UrlGet/ios-app/SiriExtension/Sources/: AppIntent.h  AppIntent.m
sample/UrlGet/ios-app/StringsExtension/Resources/Localization/cs.lproj/: InfoPlist.strings
sample/UrlGet/ios-app/StringsExtension/Sources/: AppJerry.h  AppJerry.m
sample/UrlGet/ios-app/UnitTests/: Tests2.m
sample/UrlGet/ios-app/UrlGet/: AppDelegate.m  NoArc.m  Some.cc  Some.hpp  UrlGetViewController.xib  main.m
sample/UrlGet/ios-app/Utils/: Utils.hpp
sample/UrlGet/tools/: XCHammerIndexImportAction.sh  bazelwrapper  xchammer
sample/WorkspaceSource/: BUILD  Info.plist  WORKSPACE  XCHammer.yaml  main.m  workspace.bzl
sample/WorkspaceSource/tools/: bazelwrapper  xchammer.app
tools/: BUILD  BazelToolchain.xcconfig  XCHammerXcodeRunscript.sh  bazelwrapper  process-xchammer-ipa.sh  xchammerconfig.bzl
tools/XCConfigDumper/: Package.resolved  Package.swift  README.md
tools/XCConfigDumper/Sources/XCConfigDumper/: BazelConfigOutputFormatter.swift  OutputFormatter.swift  PlainOutputFormatter.swift  Record.swift  XCodeBuildLog.swift
tools/XCConfigDumper/Sources/XCConfigDumperCore/: Record.swift  XcodeBuildLog.swift
tools/XCConfigDumper/Sources/dumper/: main.swift
tools/XCConfigDumper/Sources/xcconfigdumper/: main.swift
tools/XCConfigExporter/: BUILD  Info.plist  main.swift
tools/XCConfigExporter/ExampleLogs/: BasicOSX.txt  ExampleCpp.txt  MessySwiftLog.txt
tools/instrumentation_helpers/: README.md  instrumentor.py  statsd_post_build_action.py  statsd_post_build_action.sh  statsd_post_generate_action.py  statsd_pre_build_action.sh
tulsi-aspects/: Info.plist  bazel_build.py
tulsi-aspects/Base.lproj/: Localizable.strings  Options.strings
tulsi-aspects/Utilities/: post_processor
tulsi-aspects/tulsi/: tulsi_aspects.bzl
(+58 files in other folders)
